After three releases attempts